# backend/src/main/java/com/vettrack/api/visit/ActiveVisitContextResponse.java
@@ -10,8 +10,8 @@ import java.util.List;
 @Getter
 @AllArgsConstructor
 public class ActiveVisitContextResponse {
-    private final Visit visit;
+    private final VisitResponse visit;
     private final Pet pet;
     private final Owner owner;
-    private final List<Visit> history;
+    private final List<VisitResponse> history;
 }
